@@ -126,7 +126,7 @@ public class ConfigureImportAction extends TabBaseAction
 	}
 
 	private String formatNumber(double number) { 
-		if (number % 1 == 0) return Long.toString(new Double(number).longValue()); 
+		if (number % 1 == 0) return Long.toString(Double.valueOf(number).longValue()); 
 		return Import.encodeSeparators(NumberFormat.getNumberInstance(Locales.getCurrent()).format(number)); 
 	}
 
