@@ -10,7 +10,7 @@ public class CurrentYearCalculator implements ICalculator {
 	public Object calculate() throws Exception {
 		Calendar cal = Calendar.getInstance();
 		cal.setTime(new java.util.Date());
-		return new Integer(cal.get(Calendar.YEAR));
+		return Integer.valueOf(cal.get(Calendar.YEAR));
 	}
 
 }
