@@ -99,10 +99,10 @@ public class MetaCollection extends MetaMember implements IPropertyValidator {
 		Collection c = (Collection) object;
 		if (c.size() < getMinimum()) {
 			String elements = XavaResources.getString(getMinimum() == 1?"element":"elements");
-			errors.add("minimum_elements", new Integer(getMinimum()), "'" + elements + "'", getName(), getMetaModel().getName());			
+			errors.add("minimum_elements", Integer.valueOf(getMinimum()), "'" + elements + "'", getName(), getMetaModel().getName());			
 		}	
 		else if (getMaximum() > 0 && c.size() > getMaximum()) {
-			errors.add("maximum_elements", new Integer(getMaximum()), getName(), getMetaModel().getName()); 
+			errors.add("maximum_elements", Integer.valueOf(getMaximum()), getName(), getMetaModel().getName()); 
 		}			
 	}
 	
