@@ -46,11 +46,11 @@ public class Clerk {
 	private Boolean onVacation; 
 	
  	public static Clerk findByZoneNumberOfficeNumberNumber(int zoneNumber,int officeNumber,int number) throws NoResultException { 	 			
- 		Query query = XPersistence.getManager().createQuery("from Clerk as o where o.zoneNumber = :zoneNumber and officeNumber = :officeNumber and number = :number"); 
-		query.setParameter("zoneNumber", new Integer(zoneNumber)); 
-		query.setParameter("officeNumber", new Integer(officeNumber)); 
-		query.setParameter("number", new Integer(number)); 
- 		return (Clerk) query.getSingleResult();
+ 		TypedQuery<Clerk> query = XPersistence.getManager().createQuery("SELECT o FROM Clerk o WHERE o.zoneNumber = :zoneNumber AND officeNumber = :officeNumber AND number = :number", Clerk.class); 
+		query.setParameter("zoneNumber", Integer.valueOf(zoneNumber)); 
+		query.setParameter("officeNumber", Integer.valueOf(officeNumber)); 
+		query.setParameter("number", Integer.valueOf(number)); 
+ 		return query.getSingleResult();
  	} 
 
 
